SDGF-221: Fix compilation exception