@@ -8,6 +8,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -212,7 +213,7 @@ public class DurableClientCacheIntegrationTests extends ForkingClientServerInteg
 		waitForRegionEntryEvents();
 
 		Awaitility.await().timeout(4, TimeUnit.SECONDS)
-				.until(() -> regionCacheListenerEventValues.containsAll(List.of(4, 5)));
+				.until(() -> regionCacheListenerEventValues.containsAll(Arrays.asList(new Integer[]{4, 5})));
 	}
 
 	public static class RegionDataLoadingBeanPostProcessor<K, V> implements BeanPostProcessor {
